force-app/main/default/objects/WSM_DW_Alert_Recipient__c/WSM_DW_Alert_Recipient__c.object-meta.xml
<CustomObject>
    <description>Who gets notified when a Salesforce Digital Wallet consumption threshold is crossed. Read by the WSM - Digital Wallet Alerts scheduled flow. A record with a Salesforce User gets an in-app notification; a record with an email address gets an email; a record with both gets both.</description>
    <label>Digital Wallet Alert Recipient</label>
    <nameField>
        <label>Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Wallet Alert Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>