force-app/main/default/objects/WSM_DW_Alert_Recipient__c/fields/Effective_Email__c.field-meta.xml
<CustomField>
    <fullName>Effective_Email__c</fullName>
    <description>The address alerts are actually sent to: the linked user's email when a user is set, otherwise the typed address. A formula, not a stored copy, so a user who changes their Salesforce email is picked up immediately with nothing to re-save. The alert flow reads this field.</description>
    <formula>IF(ISBLANK(User__c), Email__c, User__r.Email)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <inlineHelpText>Derived. Set the Salesforce User or the Email field to change it.</inlineHelpText>
    <label>Effective Email</label>
    <type>Text</type>
</CustomField>