force-app/main/default/objects/WSM_DW_Alert_Recipient__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Address that receives Digital Wallet threshold alert emails. Leave blank if this recipient should only get the in-app notification.</description>
    <inlineHelpText>Leave blank if this person should only get the in-app notification.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>