force-app/main/default/objects/WSM_DW_Alert_Recipient__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck to stop alerting this recipient without deleting the record.</description>
    <inlineHelpText>Uncheck to silence this recipient without deleting the record.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>