force-app/main/default/objects/WSM_DW_Alert_Recipient__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce user who receives the in-app bell notification. Leave blank for external recipients who only need the email.</description>
    <inlineHelpText>Leave blank for external people who are not Salesforce users.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Digital Wallet Alert Recipients</relationshipLabel>
    <relationshipName>WSM_DW_Alert_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>